Added results.txt file, links, and more information.

--- a/chute/index.html
+++ b/chute/index.html
@@ -5,6 +5,7 @@
     <title>Network Test Starter Chute</title>
   </head>
   <body>
-    <p>There are no results yet.</p>
+    <h1>Network Test Results</h1>
+    <object data="results.txt" type="text/plain" width="100%" height="100%"></object>
   </body>
 </html>
